src/objects/CourseStatus__c.object
<CustomObject>
    <fields>
        <fullName>ApprovedModules__c</fullName>
        <label>Approved Modules</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Courses Status</relationshipLabel>
        <relationshipName>CoursesStatus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Member</label>
        <referenceTo>FieloPLT__Member__c</referenceTo>
        <relationshipLabel>Courses Status</relationshipLabel>
        <relationshipName>CoursesStatus</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <formula>ApprovedModules__c / Course__r.ActiveModules__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progress</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Course Status</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Course Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Courses Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ApprovedModulesCanNotBeNull</fullName>
        <active>true</active>
        <description>The Approved Modules field cannot be null.</description>
        <errorConditionFormula>ISBLANK(ApprovedModules__c)</errorConditionFormula>
        <errorMessage>The Approved Modules cannot be null.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CourseStatusMustBeActive</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISPICKVAL(Course__r.Status__c,&quot;Active&quot;))</errorConditionFormula>
        <errorDisplayField>Course__c</errorDisplayField>
        <errorMessage>Course Status must be related to a Course with the Status Active</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MemberProgram</fullName>
        <active>true</active>
        <description>Validate that member&apos;s program is the same as Courses&apos;s program</description>
        <errorConditionFormula>Member__r.FieloPLT__Program__c !=  Course__r.Program__c</errorConditionFormula>
        <errorMessage>The member should belong to the Course&apos;s program.</errorMessage>
    </validationRules>
</CustomObject>